--- a/docs/assets/css/typedoc.css
+++ b/docs/assets/css/typedoc.css
@@ -1,20 +1,11 @@
 :root {
-  --color-menu-divider: #eee;
   --color-menu-divider-focus: #000;
   --color-panel-divider: #eee;
-  --color-comment-tag: #707070;
-  --color-comment-tag-text: #fff;
-  --color-ts: #9600ff;
-  --color-ts-interface: #647f1b;
-  --color-ts-enum: #937210;
-  --color-ts-class: #0672de;
-  --color-ts-private: #707070;
 }
 
 .row {
   display: flex;
   position: relative;
-  margin: 0 -10px;
 }
 .row:after {
   visibility: hidden;
@@ -1032,17 +1023,6 @@
   padding: 0 0 0 20px;
   margin: 0;
 }
-.tsd-typography h4, .tsd-typography .tsd-index-panel h3, .tsd-index-panel .tsd-typography h3, .tsd-typography h5, .tsd-typography h6 {
-  font-size: 1em;
-  margin: 0;
-}
-.tsd-typography h5, .tsd-typography h6 {
-  font-weight: normal;
-}
-.tsd-typography p, .tsd-typography ul, .tsd-typography ol {
-  margin: 1em 0;
-}
-
 
 .tsd-breadcrumb {
   margin: 0;
@@ -1070,8 +1050,6 @@ dl.tsd-comment-tags dt {
   padding: 1px 5px;
   margin: 0 10px 0 0;
   border-radius: 4px;
-  border: 1px solid var(--color-comment-tag);
-  color: var(--color-comment-tag);
   font-size: 0.8em;
   font-weight: normal;
 }
@@ -1129,11 +1107,6 @@ footer .tsd-legend {
 .tsd-index-panel .tsd-index-section {
   margin-bottom: 30px !important;
 }
-.tsd-index-panel h3 {
-  margin: 0 -20px 10px -20px;
-  padding: 0 20px 10px 20px;
-  border-bottom: 1px solid var(--color-panel-divider);
-}
 .tsd-index-panel ul.tsd-index-list {
   -webkit-column-count: 3;
   -moz-column-count: 3;
@@ -1174,41 +1147,11 @@ footer .tsd-legend {
   -o-page-break-inside: avoid;
   page-break-inside: avoid;
 }
-.tsd-index-panel a,
-.tsd-index-panel .tsd-parent-kind-module a {
-  color: var(--color-ts);
-}
-.tsd-index-panel .tsd-parent-kind-interface a {
-  color: var(--color-ts-interface);
-}
-.tsd-index-panel .tsd-parent-kind-enum a {
-  color: var(--color-ts-enum);
-}
-.tsd-index-panel .tsd-parent-kind-class a {
-  color: var(--color-ts-class);
-}
-.tsd-index-panel .tsd-kind-module a {
-  color: var(--color-ts);
-}
-.tsd-index-panel .tsd-kind-interface a {
-  color: var(--color-ts-interface);
-}
-.tsd-index-panel .tsd-kind-enum a {
-  color: var(--color-ts-enum);
-}
-.tsd-index-panel .tsd-kind-class a {
-  color: var(--color-ts-class);
-}
-.tsd-index-panel .tsd-is-private a {
-  color: var(--color-ts-private);
-}
 
 .tsd-flag {
   display: inline-block;
   padding: 1px 5px;
   border-radius: 4px;
-  color: var(--color-comment-tag-text);
-  background-color: var(--color-comment-tag);
   text-indent: 0;
   font-size: 14px;
   font-weight: normal;
@@ -1221,26 +1164,6 @@ footer .tsd-legend {
 
 .tsd-member {
   position: relative;
-}
-.tsd-member .tsd-anchor + h3 {
-  margin-top: 0;
-  margin-bottom: 0;
-  border-bottom: none;
-}
-.tsd-member a[data-tsd-kind] {
-  color: var(--color-ts);
-}
-.tsd-member a[data-tsd-kind=Interface] {
-  color: var(--color-ts-interface);
-}
-.tsd-member a[data-tsd-kind=Enum] {
-  color: var(--color-ts-enum);
-}
-.tsd-member a[data-tsd-kind=Class] {
-  color: var(--color-ts-class);
-}
-.tsd-member a[data-tsd-kind=Private] {
-  color: var(--color-ts-private);
 }
 
 .tsd-navigation {
@@ -1309,21 +1232,6 @@ footer .tsd-legend {
   padding-top: 20px;
 }
 
-.tsd-navigation.secondary {
-  max-height: calc(100vh - 1rem - 40px);
-  overflow: auto;
-  position: -webkit-sticky;
-  position: sticky;
-  top: calc(.5rem + 40px);
-  transition: 0.3s;
-}
-.tsd-navigation.secondary.tsd-navigation--toolbar-hide {
-  max-height: calc(100vh - 1rem);
-  top: 0.5rem;
-}
-.tsd-navigation.secondary ul {
-  transition: opacity 0.2s;
-}
 .tsd-navigation.secondary ul li a {
   padding-left: 25px;
 }
@@ -1358,28 +1266,19 @@ footer .tsd-legend {
   font-weight: bold;
 }
 
-@media (min-width: 901px) {
-  .menu-sticky-wrap {
-    position: static;
-  }
-}
-
 .tsd-panel {
   margin: 20px 0;
   padding: 20px;
-  box-shadow: 0 0 4px rgba(0, 0, 0, 0.25);  /*TODO*/
+  border: 1px solid #ccc;
+  overflow: auto;
 }
+
+.tsd-panel pre {
+  background-color: #fff;
+}
+
 .tsd-panel:empty {
   display: none;
-}
-.tsd-panel > h1, .tsd-panel > h2, .tsd-panel > h3 {
-  margin: 1.5em -20px 10px -20px;
-  padding: 0 20px 10px 20px;
-  border-bottom: 1px solid var(--color-panel-divider);
-}
-.tsd-panel > h1.tsd-before-signature, .tsd-panel > h2.tsd-before-signature, .tsd-panel > h3.tsd-before-signature {
-  margin-bottom: 0;
-  border-bottom: 0;
 }
 .tsd-panel table {
   display: block;
@@ -1394,25 +1293,11 @@ footer .tsd-legend {
 }
 .tsd-panel table th, .tsd-panel table td {
   padding: 6px 13px;
-  border: 1px solid #ddd;
-}
-.tsd-panel table tr {
-  background-color: #fff;
-  border-top: 1px solid #ccc;
-}
-.tsd-panel table tr:nth-child(2n) {
-  background-color: #f8f8f8;
-}
-
-.tsd-panel-group > h1, .tsd-panel-group > h2, .tsd-panel-group > h3 {
-  padding-left: 20px;
-  padding-right: 20px;
 }
 
 .tsd-signature {
   margin: 0 0 1em 0;
   padding: 10px;
-  border: 1px solid var(--color-panel-divider);
   font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
   font-size: 14px;
   overflow-x: auto;
@@ -1448,7 +1333,6 @@ footer .tsd-legend {
 .tsd-signatures {
   padding: 0;
   margin: 0 0 1em 0;
-  border: 1px solid var(--color-panel-divider);
 }
 .tsd-signatures .tsd-signature {
   margin: 0;
@@ -1504,10 +1388,6 @@ ul.tsd-descriptions.active > .tsd-description.fade-out {
   right: 0;
   opacity: 0;
   visibility: hidden;
-}
-ul.tsd-descriptions h4, ul.tsd-descriptions .tsd-index-panel h3, .tsd-index-panel ul.tsd-descriptions h3 {
-  font-size: 16px;
-  margin: 1em 0 0.5em 0;
 }
 
 ul.tsd-parameters,
